Mon Nov  9 11:48:29 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.1.0 beta.

	* Moved some settings from chunk_loc.h into settings.dist.

	* Improved the handling of free(NULL) and malloc(0) settings.

	* Added initial memalign support with a error message if the
        alignment is less than block size which is not currently
        supported.

	* Renamed print-error token to print-messages.

Wed Oct 28 10:17:13 1998  Gray Watson  <gray@burger.letters.com>

	* Increased the default max memory size from 16mb to 64mb.

Thu Oct 15 11:06:41 1998  Gray Watson  <gray@burger.letters.com>

	* Released dmalloc version 4.0.3.

	* Moved to #ident for rcs-ids in GCC.

	* Found and fixed a bug when reallocing a previous valloced
        section.  Not a good idea anyway since it will not preserve the
        block-aligned status (should it).

	* Released dmalloc version 4.0.2.

	* Fixed a problem in return.h and DMALLOC_UNKNOWN_FILE.  Ugh.
        Thanks much to Mike Sacauskis for pointing this out.

Thu Oct  8 11:07:25 1998  Gray Watson  <gray@burger.letters.com>

	* Released dmalloc version 4.0.1.

	* Added startup messages acknowledging the thread status.  Added
        error.o to the thread object list.

Wed Oct  7 14:52:14 1998  Gray Watson  <gray@burger.letters.com>

	* Fixed problem with thread compilation and chunk.c.  Thanks much
        to Didier Verna for pointing out this problem.

	* Fixed possible race condition with synchronizing with external
        sbrk calls.

Mon Oct  5 22:56:46 1998  Gray Watson  <gray@burger.letters.com>

	* Migrated in new argv code.

Sun Oct  4 22:56:46 1998  Gray Watson  <gray@burger.letters.com>

	* Released dmalloc version 4.0.0.

	* Updated the manual a bit.

	* Made a small change to the solaris return.h code.  Thanks
        Alexandre.

Tue Sep 29 09:26:50 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.0.0 beta2. 
